--- a/tools/index.html
+++ b/tools/index.html
@@ -21,7 +21,8 @@
         <span class="cta">View</span>
       </a>
 
-      <a class="card" href="#" target="_blank" rel="noopener">
+      <a class="card" href="href="https://links.surfsharkbiz.com/s/c/b9Kgb1RcprVizC8fHP8ksEn-_SA-pLrwB0Ervd91HnoV_MqNgrUUSdAgXEI5_ZFah044iqouCz7V-oNFxFjDVwmYz62Lq9pOdVG96RopoVvZgkumGVucRyXzusIEz6dP13QG1rxobykfcm1gJ2mJbbmKJq3UlrvNVjiiATD8baS6-0kLWbDKS5-WSv6N5GZbSnStC6j0ndiQvYo3Hjul_MkihCFmwgxx85A1REKJ37WmKQe-n0jSIkvRjKdf3yZDIGLWOQ5Qj3hV7TC9uEbLQVKgkXmZWwR5JzYbltxOJm8K2ZSDdJKk7e-dWgJZT4aePZD5HYC4_1Q6ldd1k67H-752O18pWDItobA51ciXwwBHVQ6klZR6pLzUVOBpAWbBFrF23iWfI7dMoMVm3DB6asyY-rV9KeZ64c4NquIgzgY/O4UUId6Kf83Q6Dm4K9vQlHt5gkKYC6bH/17"
+" target="_blank" rel="noopener">
         <h3>AWIN Tools</h3>
         <p>Curated utilities and services coming soon.</p>
         <span class="cta">View</span>
