--- a/tools/index.html
+++ b/tools/index.html
@@ -15,17 +15,18 @@
     </header>
 
     <section class="grid">
-      <a class="card" href="https://links.surfsharkbiz.com/s/c/b9Kgb1RcprVizC8fHP8ksEn-_SA-pLrwB0Ervd91HnoV_MqNgrUUSdAgXEI5_ZFah044iqouCz7V-oNFxFjDVwmYz62Lq9pOdVG96RopoVvZgkumGVucRyXzusIEz6dP13QG1rxobykfcm1gJ2mJbbmKJq3UlrvNVjiiATD8baS6-0kLWbDKS5-WSv6N5GZbSnStC6j0ndiQvYo3Hjul_MkihCF" target="_blank" rel="noopener">
+      <a class="card"
+         href="https://links.surfsharkbiz.com/s/c/TkERedHK01U0KECqQqBFwmTw9UyST5DDwdeIWQnaqnCeuohjTG3DRe9EvPSS8BRBVo_smaXkzFFJzXMA7-aifVGaiZ1l-kes_V3ca5PHCrptcNYZpbPy8gjbvKKsr0u8s16v7W8w6ulj1Tz7fUR7ol0W93hG_jOgDSv-2dLX8ZrSAAyPlHK1ACxD1ZdF1SOJI5dCa0MaHm9il-G3f4r0M8PR3jyD7LpG8eVN-9LNz7-MFouNjJSn-6S3X_xNp225okgXdK_OQf70vyEZD4JWw48OKPPKoczdM1VML88EQ84ZT3zT3PdejYkGwGen6pyq__VcTQ5gmhkpfEF-CNhxkgf1u9jM4krZK3JKCBuLPLdDHOZ_YcUzoulYt3CsfB91sKmIFr7N1_1GVNeJzIw5Zkj4B7qTpWrjx5Waqvdu-Ul0qvI4W489pc3HnpmIuJ91KFIVvLdG9bA/CUQTnj1cbbGFNJWEUL12VhettBnS0DkX/17"
+         target="_blank" rel="noopener">
         <h3>Surfshark VPN</h3>
         <p>Fast, private browsing with global protection.</p>
         <span class="cta">View</span>
       </a>
 
-      <a class="card" href="href="https://links.surfsharkbiz.com/s/c/b9Kgb1RcprVizC8fHP8ksEn-_SA-pLrwB0Ervd91HnoV_MqNgrUUSdAgXEI5_ZFah044iqouCz7V-oNFxFjDVwmYz62Lq9pOdVG96RopoVvZgkumGVucRyXzusIEz6dP13QG1rxobykfcm1gJ2mJbbmKJq3UlrvNVjiiATD8baS6-0kLWbDKS5-WSv6N5GZbSnStC6j0ndiQvYo3Hjul_MkihCFmwgxx85A1REKJ37WmKQe-n0jSIkvRjKdf3yZDIGLWOQ5Qj3hV7TC9uEbLQVKgkXmZWwR5JzYbltxOJm8K2ZSDdJKk7e-dWgJZT4aePZD5HYC4_1Q6ldd1k67H-752O18pWDItobA51ciXwwBHVQ6klZR6pLzUVOBpAWbBFrF23iWfI7dMoMVm3DB6asyY-rV9KeZ64c4NquIgzgY/O4UUId6Kf83Q6Dm4K9vQlHt5gkKYC6bH/17"
-" target="_blank" rel="noopener">
+      <a class="card" href="#" aria-disabled="true">
         <h3>AWIN Tools</h3>
         <p>Curated utilities and services coming soon.</p>
-        <span class="cta">View</span>
+        <span class="cta">Coming Soon</span>
       </a>
     </section>
 
