--- a/tools/index.html
+++ b/tools/index.html
@@ -15,6 +15,8 @@
     </header>
 
     <section class="grid">
+
+      <!-- SURFSHARK -->
       <a class="card"
          href="https://links.surfsharkbiz.com/s/c/TkERedHK01U0KECqQqBFwmTw9UyST5DDwdeIWQnaqnCeuohjTG3DRe9EvPSS8BRBVo_smaXkzFFJzXMA7-aifVGaiZ1l-kes_V3ca5PHCrptcNYZpbPy8gjbvKKsr0u8s16v7W8w6ulj1Tz7fUR7ol0W93hG_jOgDSv-2dLX8ZrSAAyPlHK1ACxD1ZdF1SOJI5dCa0MaHm9il-G3f4r0M8PR3jyD7LpG8eVN-9LNz7-MFouNjJSn-6S3X_xNp225okgXdK_OQf70vyEZD4JWw48OKPPKoczdM1VML88EQ84ZT3zT3PdejYkGwGen6pyq__VcTQ5gmhkpfEF-CNhxkgf1u9jM4krZK3JKCBuLPLdDHOZ_YcUzoulYt3CsfB91sKmIFr7N1_1GVNeJzIw5Zkj4B7qTpWrjx5Waqvdu-Ul0qvI4W489pc3HnpmIuJ91KFIVvLdG9bA/CUQTnj1cbbGFNJWEUL12VhettBnS0DkX/17"
          target="_blank" rel="noopener">
@@ -23,11 +25,13 @@
         <span class="cta">View</span>
       </a>
 
+      <!-- AWIN PLACEHOLDER -->
       <a class="card" href="#" aria-disabled="true">
         <h3>AWIN Tools</h3>
         <p>Curated utilities and services coming soon.</p>
         <span class="cta">Coming Soon</span>
       </a>
+
     </section>
 
     <footer class="footer">
